test/message/promise_always_throw_unhandled.out
*promise_always_throw_unhandled.js:*
  throw new Error('One');
        ^
Error: One
    at *promise_always_throw_unhandled.js:*:*
    at new Promise (<anonymous>)
    at Object.<anonymous> (*promise_always_throw_unhandled.js:*:*)
    at *
    at *
    at *
    at *
    at *
    at *
